--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,42 @@
-<button id='get_users'>Get Users</button>
-<button id='add_partial'>Add a partial</button>
-<form id='edit_user' class='hide'>
-  First Name: <input id='first_name'>
-  Last Name: <input id='last_name'>
-  Phone Number: <input id='phone_number'>
-  <button class='edit' type='button'>Submit</button>
-</form>
+<div class="container">
 
-<form id='add_user'>
-  First Name: <input id='new_first_name'>
-  Last Name: <input id='new_last_name'>
-  Phone Number: <input id='new_phone_number'>
-  <button class='add' type='button'>Submit</button>
-</form>
+  <div class="row center">
+    <br />
+    <button class='btn' id='get_users'>Get Users</button>
+    <button class='btn' id='add_partial'>Add a partial</button>
+  </div>
 
-<ul id='users'>
-</ul>
+  <div class="row">
+    <form id='edit_user' class='hide col s12 m8 offset-m2'>
+      <div class="input-field">
+        First Name: <input type="text" id='first_name'>
+      </div>
+      <div class="input-field">
+        Last Name: <input type="text" id='last_name'>
+      </div>
+      <div class="input-field">
+        Phone Number: <input type="text" id='phone_number'>
+      </div>
+      <div class="row center">
+        <button class='btn edit' type='button'>Submit</button>
+      </div>
+    </form>
+  </div>
+
+  <div class="row">
+    <form id='add_user' class="col s12 m8 offset-m2">
+      <div class="input-field">
+        First Name: <input type="text" id='new_first_name'>
+        Last Name: <input type="text" id='new_last_name'>
+        Phone Number: <input type="text" id='new_phone_number'>
+      </div>
+      <br />
+      <div class="row center">
+        <button class='btn add' type='button'>Submit</button>
+      </div>
+    </form>
+  </div>
+
+  <ul id='users'>
+  </ul>
+</div>
