fix buttons, styling

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+
 
   <div class="row center">
     <br />
@@ -37,6 +37,9 @@
     </form>
   </div>
 
-  <ul id='users'>
-  </ul>
+<div class="row">
+  <div class="col s12 m6 offset-m3">
+    <ul id='users'>
+    </ul>
+  </div>
 </div>
